--- a/cambio-service - bkp/src/main/resources/application.yml
+++ b/cambio-service - bkp/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 8000
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 spring:
   application:
     name: cambio-service
@@ -20,3 +24,10 @@ spring:
     schemas: cambio_service
     user: cambio
     password: cambio123
+  sleuth:
+    sampler:
+      probability: 1.0
+springdoc:
+  show-actuator: true
+  api-docs:
+    path: cambio-service/v3/api-docs
