--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8100
+  port: 8101
 eureka:
   client:
     service-url:
@@ -38,10 +38,9 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MySQL57Dialect
   flyway:
-    url: jdbc:mysql://localhost:3307/
-    schemas: book_service
+    url: jdbc:mysql://localhost:3307/book_service?useTimezone=true&serverTimezone=UTC
     user: book
     password: book123
   sleuth:
